Serverless v34: Add zeus, vanilla, shatel anti-sanction-dns; Remove local; Remove dependency on list Chocolate4U

--- a/Serverless-dynx.jsonc
+++ b/Serverless-dynx.jsonc
@@ -6,7 +6,7 @@
   },
 
 
-  "remarks": "Serverless-dynx-v32",
+  "remarks": "Serverless-dynx-v34",
 
   "version": {
     "min": "25.12.8"
@@ -44,7 +44,14 @@
     "servers": [
       {
         "address": "fakedns",
-        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:challenges.cloudflare.com", "domain:dynx.pro", "geosite:sanctioned", "geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"]
+        "domains": ["domain:ir", "geosite:private", "geosite:category-ir", "full:challenges.cloudflare.com", "domain:dynx.pro", "geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"]
+      },
+	  {
+        "tag": "anti-sanction-dns",
+        "address": "h2c://anti-ban.dynx.pro/dns-query",
+        "expectedIPs": ["10.139.177.16", "10.139.177.17", "10.139.177.18"],
+        "timeoutMs": 5000,
+        "finalQuery": false
       },
       {
         "tag": "no-filter-dns",
@@ -55,16 +62,8 @@
       },
       {
         "address": "localhost",
-        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:challenges.cloudflare.com", "domain:dynx.pro"],
+        "domains": ["domain:ir", "geosite:private", "geosite:category-ir", "full:challenges.cloudflare.com", "domain:dynx.pro"],
         "finalQuery": true
-      },
-      {
-        "tag": "anti-sanction-dns",
-        "address": "https://anti-ban.dynx.pro/dns-query",
-        "domains": ["geosite:sanctioned"],
-        "unexpectedIPs": ["geoip:irgfw-all-injected-ips", "0.0.0.0", "::", "127.0.0.1", "::1"],
-        "timeoutMs": 4000,
-        "finalQuery": false
       }
     ],
     "queryStrategy": "UseSystem",
@@ -129,7 +128,7 @@
             "tryDelayMs": 300,
             "prioritizeIPv6": true,
             "interleave": 2,
-            "maxConcurrentTry": 16
+            "maxConcurrentTry": 20
           }
         }
       }
@@ -141,6 +140,19 @@
         "targetStrategy": "ForceIPv6v4"
 	  }
 	},
+	{
+      "tag": "onlyv4-direct-out",
+      "protocol": "direct",
+      "streamSettings": {
+        "sockopt": {
+          "domainStrategy": "ForceIPv4",
+          "happyEyeballs": {
+            "tryDelayMs": 300,
+            "maxConcurrentTry": 20
+          }
+        }
+      }
+    },
     {
       "tag": "dns-out",
       "protocol": "dns",
@@ -198,7 +210,7 @@
             "tryDelayMs": 300,
             "prioritizeIPv6": true,
             "interleave": 2,
-            "maxConcurrentTry": 16
+            "maxConcurrentTry": 20
           }
         }
       }
@@ -221,7 +233,7 @@
             "tryDelayMs": 300,
             "prioritizeIPv6": true,
             "interleave": 2,
-            "maxConcurrentTry": 16
+            "maxConcurrentTry": 20
           }
         }
       }
@@ -258,6 +270,26 @@
           {"type": "rand", "packet": "1230", "delay": "10", "applyTo": "ipv6"}, {"type": "rand", "packet": "1230", "delay": "10", "applyTo": "ipv6"}
         ]
       }
+    },
+	{
+      "tag": "tls-repack-dns",
+      "protocol": "direct",
+      "streamSettings": {
+		"security": "tls",
+		"tlsSettings": {
+          "serverName": "anti-ban.dynx.pro",
+          "fingerprint": "chrome"
+        },
+        "sockopt": {
+          "domainStrategy": "ForceIP",
+          "happyEyeballs": {
+            "tryDelayMs": 300,
+            "prioritizeIPv6": true,
+            "interleave": 2,
+            "maxConcurrentTry": 20
+          }
+        }
+      }
     }
   ],
 
@@ -276,7 +308,7 @@
       {"outboundTag": "dns-out",
        "inboundTag": ["socks-in"], "port": 53
       },
-      {"outboundTag": "tcp-direct-out",
+      {"outboundTag": "tls-repack-dns",
        "network": "tcp", "inboundTag": ["anti-sanction-dns"]
       },
 	  {"outboundTag": "udp-direct-out",
@@ -286,14 +318,17 @@
        "inboundTag": ["no-filter-dns"]
       },
       {"outboundTag": "block-out",
-       "ip": ["geoip:irgfw-block-injected-ips", "0.0.0.0", "::", "198.19.0.0/16", "fc80::/9"]
+       "ip": ["10.10.34.0/24", "2001:4188:2:600::/64", "0.0.0.0", "::", "198.19.0.0/16", "fc80::/9"]
       },
       {"outboundTag": "tcp-direct-out",
-       "network": "tcp", "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
+       "network": "tcp", "domain": ["domain:ir", "geosite:private", "geosite:category-ir"], "ip": ["0.0.0.0/0", "::/0"]
       },
 	  {"outboundTag": "udp-direct-out",
-       "network": "udp", "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
+       "network": "udp", "domain": ["domain:ir", "geosite:private", "geosite:category-ir"], "ip": ["0.0.0.0/0", "::/0"]
       },
+	  {"outboundTag": "onlyv4-direct-out", // ensure route to anti-sanction-dns servers
+	   "ip": ["10.139.177.16", "10.139.177.17", "10.139.177.18"]
+	  },
       {"outboundTag": "tcp-direct-out",
        "network": "tcp", "ip": ["geoip:private", "geoip:ir"]
       },
