--- a/Serverless-shatel.jsonc
+++ b/Serverless-shatel.jsonc
@@ -6,7 +6,7 @@
   },
 
 
-  "remarks": "Serverless-v34",
+  "remarks": "Serverless-shatel-v34",
 
   "version": {
     "min": "25.12.8"
@@ -39,16 +39,25 @@
   "dns":{
     "hosts": {
       "geosite:category-ads-all": "#3",
-      "cloudflare-dns.com": "challenges.cloudflare.com"
+      "cloudflare-dns.com": "challenges.cloudflare.com",
+	  "dns.shatel": ["85.15.1.14", "85.15.1.15"]
     },
     "servers": [
       {
         "address": "fakedns",
-        "domains": ["domain:ir", "geosite:private", "geosite:category-ir", "full:challenges.cloudflare.com"]
+        "domains": ["domain:ir", "geosite:private", "geosite:category-ir", "full:challenges.cloudflare.com", "geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"]
+      },
+	  {
+        "tag": "anti-sanction-dns",
+        "address": "tcp://dns.shatel:53",
+        "expectedIPs": ["50.7.4.0/24"],
+        "timeoutMs": 5000,
+        "finalQuery": false
       },
       {
         "tag": "no-filter-dns",
         "address": "https://cloudflare-dns.com/dns-query",
+        "domains": ["geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"],
         "timeoutMs": 10000,
         "finalQuery": true
       },
@@ -132,6 +141,19 @@
         "targetStrategy": "ForceIPv6v4"
 	  }
 	},
+	{
+      "tag": "onlyv4-direct-out",
+      "protocol": "direct",
+      "streamSettings": {
+        "sockopt": {
+          "domainStrategy": "ForceIPv4",
+          "happyEyeballs": {
+            "tryDelayMs": 300,
+            "maxConcurrentTry": 20
+          }
+        }
+      }
+    },
     {
       "tag": "dns-out",
       "protocol": "dns",
@@ -267,6 +289,12 @@
       {"outboundTag": "dns-out",
        "inboundTag": ["socks-in"], "port": 53
       },
+      {"outboundTag": "tcp-direct-out",
+       "network": "tcp", "inboundTag": ["anti-sanction-dns"]
+      },
+	  {"outboundTag": "udp-direct-out",
+       "network": "udp", "inboundTag": ["anti-sanction-dns"]
+      },
       {"outboundTag": "full-fragment", // or "skip-fragment" or "tls-fragment"
        "inboundTag": ["no-filter-dns"]
       },
@@ -279,6 +307,9 @@
 	  {"outboundTag": "udp-direct-out",
        "network": "udp", "domain": ["domain:ir", "geosite:private", "geosite:category-ir"], "ip": ["0.0.0.0/0", "::/0"]
       },
+	  {"outboundTag": "onlyv4-direct-out", // ensure route to anti-sanction-dns servers
+	   "ip": ["50.7.4.0/24"]
+	  },
       {"outboundTag": "tcp-direct-out",
        "network": "tcp", "ip": ["geoip:private", "geoip:ir"]
       },
