--- a/Serverless-vanilla.jsonc
+++ b/Serverless-vanilla.jsonc
@@ -6,7 +6,7 @@
   },
 
 
-  "remarks": "Serverless-vanilla-v36",
+  "remarks": "Serverless-vanilla-v37",
 
   "version": {
     "min": "25.12.8"
@@ -91,7 +91,7 @@
       }
     },
     {
-      "tag": "socks-in",
+      "tag": "mixed-in",
       // "listen": "127.0.0.1",
       "port": 10808,
       "protocol": "mixed",
@@ -306,7 +306,7 @@
        "inboundTag": ["dns-in"]
       },
       {"outboundTag": "dns-out",
-       "inboundTag": ["socks-in"], "port": 53
+       "inboundTag": ["mixed-in"], "port": 53
       },
       {"outboundTag": "tls-repack-dns",
        "network": "tcp", "inboundTag": ["anti-sanction-dns"]
