--- a/Serverless.jsonc
+++ b/Serverless.jsonc
@@ -6,7 +6,7 @@
   },
 
 
-  "remarks": "Serverless-v36",
+  "remarks": "Serverless-v37",
 
   "version": {
     "min": "25.12.8"
@@ -83,7 +83,7 @@
       }
     },
     {
-      "tag": "socks-in",
+      "tag": "mixed-in",
       // "listen": "127.0.0.1",
       "port": 10808,
       "protocol": "mixed",
@@ -265,7 +265,7 @@
        "inboundTag": ["dns-in"]
       },
       {"outboundTag": "dns-out",
-       "inboundTag": ["socks-in"], "port": 53
+       "inboundTag": ["mixed-in"], "port": 53
       },
       {"outboundTag": "full-fragment", // or "skip-fragment" or "tls-fragment"
        "inboundTag": ["no-filter-dns"]
