--- a/Serverless-dynx.jsonc
+++ b/Serverless-dynx.jsonc
@@ -6,7 +6,7 @@
   },
 
 
-  "remarks": "Serverless-dynx-v38",
+  "remarks": "Serverless-dynx-v39",
 
   "version": {
     "min": "25.12.8"
@@ -44,7 +44,7 @@
     "servers": [
       {
         "address": "fakedns",
-        "domains": ["domain:ir", "geosite:private", "geosite:category-ir", "full:challenges.cloudflare.com", "domain:dynx.pro", "geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"]
+        "domains": ["domain:ir", "geosite:private", "geosite:category-ir", "full:challenges.cloudflare.com", "domain:dynx.pro", "geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord", "domain:workers.dev", "domain:pages.dev"]
       },
 	  {
         "tag": "anti-sanction-dns",
@@ -56,7 +56,7 @@
       {
         "tag": "no-filter-dns",
         "address": "https://cloudflare-dns.com/dns-query",
-        "domains": ["geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"],
+        "domains": ["geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord", "domain:workers.dev", "domain:pages.dev"],
         "timeoutMs": 10000,
         "finalQuery": true
       },
