--- a/Serverless.jsonc
+++ b/Serverless.jsonc
@@ -6,7 +6,7 @@
   },
 
 
-  "remarks": "Serverless-v38",
+  "remarks": "Serverless-v39",
 
   "version": {
     "min": "25.12.8"
@@ -44,11 +44,12 @@
     "servers": [
       {
         "address": "fakedns",
-        "domains": ["domain:ir", "geosite:private", "geosite:category-ir", "full:challenges.cloudflare.com"]
+        "domains": ["domain:ir", "geosite:private", "geosite:category-ir", "full:challenges.cloudflare.com", "geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord", "domain:workers.dev", "domain:pages.dev"]
       },
       {
         "tag": "no-filter-dns",
         "address": "https://cloudflare-dns.com/dns-query",
+		"domains": ["geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord", "domain:workers.dev", "domain:pages.dev"],
         "timeoutMs": 10000,
         "finalQuery": true
       },
